@@ -27,7 +27,9 @@ our @EXPORT = (
     '&expand_bracket',
     '&uid_test',
     '&ellipsis',
-    '&digest_file_hex_md5'
+    '&digest_file_hex_md5',
+    '&is_tainted',
+    '&examine_object'
 );
 
 =head1 NAME
@@ -228,6 +230,112 @@ sub digest_file_hex_md5($)
     } else {
         return undef;
     }
+}
+
+=item is_tainted($var)
+
+Returns true/false depending on whether or not an item is tainted.
+
+=cut
+
+sub
+is_tainted($) {
+    # "Borrowed" from the perlsec man page.
+    return ! eval { eval("#" . substr($_[0], 0, 0)); 1 };
+}
+
+=item examine_object($var, [$buffer, [$indent, [$indent_step]]])
+
+Returns a string representation of a deep examination of the value of
+a reference.  Useful for debugging complex data structures and
+objects.  Results are appeneded to the contents of $buffer (default
+"") and returned.  $indent is the numerical value for the initial
+indent level (default 0).  $indent_step determines how many spaces to
+indent each subsequent level (default 4).
+
+=cut
+
+sub
+examine_object(@)
+{
+    my ($item, $buffer, $indent, $indent_step) = @_;
+    my $tainted;
+
+    # Set default parameters.
+    if (!defined($buffer)) {
+        $buffer = "";
+    }
+    if (!defined($indent)) {
+        $indent = 0;
+    }
+    if (!defined($indent_step)) {
+        $indent_step = 4;
+    }
+    if (&is_tainted($item)) {
+        $tainted = ' *TAINTED*';
+    } else {
+        $tainted = '';
+    }
+
+    # Figure out what type it is first.
+    if (!defined($item)) {
+        $buffer .= "UNDEF";
+    } elsif (ref($item)) {
+        my $type = ref($item);
+
+        if ($type eq "SCALAR") {
+            $buffer .= "SCALAR REF $item$tainted {\n" . (' ' x ($indent + $indent_step));
+            $buffer = &examine_object(${$item}, $buffer, $indent + $indent_step, $indent_step);
+            $buffer .= "\n" . (' ' x $indent) . '}';
+        } elsif ($type eq "ARRAY") {
+            $buffer .= "ARRAY REF $item$tainted {\n";
+            for (my $i = 0; $i < scalar(@{$item}); $i++) {
+                $buffer .= (' ' x ($indent + $indent_step)) . "$i:  ";
+                $buffer = &examine_object($item->[$i], $buffer, $indent + $indent_step, $indent_step) . "\n";
+            }
+            $buffer .= (' ' x $indent) . '}';
+        } elsif ($type eq "HASH") {
+            $buffer .= "HASH REF $item$tainted {\n";
+            foreach my $key (sort(keys(%{$item}))) {
+                $buffer .= (' ' x ($indent + $indent_step));
+                $buffer = &examine_object($key, $buffer, $indent + $indent_step, $indent_step) . " => ";
+                $buffer = &examine_object($item->{$key}, $buffer, $indent + $indent_step, $indent_step) . "\n";
+            }
+            $buffer .= (' ' x $indent) . '}';
+        } elsif ($type eq "CODE") {
+            $buffer .= "CODE REF $item$tainted";
+        } elsif ($type eq "REF") {
+            $buffer .= "REF REF $item$tainted {\n" . (' ' x ($indent + $indent_step));
+            $buffer = &examine_object(${$item}, $buffer, $indent + $indent_step, $indent_step);
+            $buffer .= "\n" . (' ' x $indent) . '}';
+        } elsif ($type eq "GLOB") {
+            $buffer .= "GLOB REF $item$tainted";
+        } elsif ($type eq "LVALUE") {
+            $buffer .= "LVALUE REF $item$tainted";
+        #} elsif ($type eq "Regexp") {
+        } else {
+            # Some object type.
+            $buffer .= ref($item) . " REF $item$tainted {\n" . (' ' x ($indent + $indent_step));
+            if (UNIVERSAL::isa($item, "CODE")) {
+                $item = \&{$item};
+            } elsif (UNIVERSAL::isa($item, "REF")) {
+                $item = \${$item};
+            } elsif (UNIVERSAL::isa($item, "HASH")) {
+                $item = \%{$item};
+            } elsif (UNIVERSAL::isa($item, "ARRAY")) {
+                $item = \@{$item};
+            } else {
+                $item = \"UNKNOWN";  #"
+            }
+            $buffer = &examine_object($item, $buffer, $indent + $indent_step, $indent_step);
+            $buffer .= "\n" . (' ' x $indent) . '}';
+        }
+    } elsif ($item =~ /^\d+$/) {
+        $buffer .= "$item$tainted";
+    } else {
+        $buffer .= sprintf("\"%s\" (%d)%s", $item, length($item), $tainted);
+    }
+    return $buffer;
 }
 
 =back
