@@ -1,16 +1,16 @@
 # This is a test configuration file
      # Leading whitespace shouldn't matter.
 simple = test
-some key = some value
+some key = "some value"
 
-other key = other value   # This should be stripped also.
+other.key = other.value   # This comment should be stripped.
 
 test list = val1, val2 ,, , "value 3" 'value four,',,,,,val5           val6
 
 continuation = first\ line
     "second line"
 
-# The following line intentionally contains whitespace.
+# The following line intentionally contains whitespace and should be ignored.
                                                
 
 list += one
